# SuperConsoleNew

./: .gitignore  README.md  pyproject.toml
data/: bios  emulators  images  roms  videos
scripts/: run.sh  superconsole_hotkeys.ahk
src/superconsole/: __main__.py  actions.py  logging_setup.py  main.py  paths.py  state.py  validate.py
src/superconsole/core/: models.py  titles.py
src/superconsole/services/: covers.py  game_launcher.py  index_cache.py  library_db.py  library_sync.py  rom_scan.py  rom_scanner.py
src/superconsole/ui/: app.py  widgets.py
src/superconsole/ui/screens/: home.py  library.py
