[tool.poetry]
name = "superconsolenew"
version = "0.1.0"
description = ""
authors = ["phippsammon <phippsammon175@gmail.com>"]
readme = "README.md"
packages = [{ include = "superconsole", from = "src" }]


[tool.poetry.dependencies]
python = "^3.12"
kivy = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
superconsole = "superconsole.main:main"
